--- a/skillcom-mobile-client/package.json
+++ b/skillcom-mobile-client/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
+    "@azure/msal-angular": "^2.4.1",
+    "@azure/msal-browser": "^2.28.1",
     "bootstrap": "^5.2.0",
     "modals": "^0.1.9",
     "rxjs": "~7.5.0",
